Fix navbar z-index, redirect from login if already authed

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,3 +1,7 @@
+.navbar {
+	z-index: 100;
+}
+
 .logged-in-user {
 	margin-right: 1rem;
 }
